ansible/files/iptables/coolify.iptables.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o ens4 -j MASQUERADE
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8000 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6001 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6002 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 64999 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -p tcp -m state --state NEW -m tcp --dport 18448 -j ACCEPT -m comment --comment "Ansble Managed Rule"
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT -m comment --comment "Ansble Managed Rule"
COMMIT
